...

@Composable
@Preview(showBackground = true)
fun LineGraphPreview() {
    // Mock data for the line graph
    val mockEntries = listOf(
        ReportEntry(value = "123", templateId = 1, reportId = 1, timestamp = "Thu Jan 09 19:10:08 EST 2025"),
        ReportEntry(value = "127", templateId = 1, reportId = 1, timestamp = "Sun Jan 12 19:10:08 EST 2025"),
        ReportEntry(value = "20", templateId = 1, reportId = 1, timestamp = "Fri Jan 10 19:10:08 EST 2025"),
        ReportEntry(value = "75", templateId = 1, reportId = 1, timestamp = "Fri Jan 10 15:10:08 EST 2025"),
        ReportEntry(value = "45", templateId = 1, reportId = 1, timestamp = "Thu Jan 09 12:10:08 EST 2025"),
    )
    LineGraph(entries = mockEntries, name = "Sample Pie Chart")
...
